Projeto - Login Page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -14,7 +14,7 @@
     <div class="main-login">
         <div class="left-login">
             <h1>Venha fazer parte da nossa história,<br>Faça o seu login!</h1>
-            <img src="witch-animate.svg" class="img" alt="Bruxinha">
+            <img src="./assets/witch-animate.svg" class="img" alt="Bruxinha">
         </div>
         <div class="right-login">
             <div class="card">
